# setupbench-cc

./: .env.example  .gitignore  Dockerfile.agent  README.md  pyproject.toml  run_smoke_test_simple.py
docs/: ARCHITECTURE_FIX.md  IMPLEMENTATION_SUMMARY.md  VERIFICATION_REPORT.md  benchmark-construction.md  claude-code-setupbench-plan-minimal.md  code-reuse-analysis.md  setupbench-compliance.md  setupbench-summary.md
scripts/: restart_docker.sh  run_agent_in_container.py  run_setupbench.py
smoke_test_simple_results/: smoke_test_summary.json  summary.json
smoke_test_simple_results/logs/: metrics.json
smoke_test_simple_results/results/: bgsetup-filewatcher-daemon.json  dbsetup-postgresql-1.json  pytesseract-df9fce0.json
smoke_test_tasks/: 1_database_setup.json  2_dependency_resolution.json  3_background_service.json  4_repo_setup.json  README.md
src/setupbench_runner/: __init__.py  agent.py  agent_docker.py  agent_logging.py  docker.py  harness.py  harness_docker.py  harness_v2.py
tasks/: README.md
tasks/ubuntu/: actions-cache-81382a7.json  beautify-web-js-beautify-6de9268.json  benjaminp-six-c1b416f.json  bgsetup-autossh-logging.json  bgsetup-autossh-reverse-tunnel.json  bgsetup-celery-systemd.json  bgsetup-filewatcher-daemon-2.json  bgsetup-filewatcher-daemon.json  bgsetup-gunicorn-nginx-socket.json  bgsetup-gunicorn-systemd-socket.json  bgsetup-multiprocess-master-worker.json  bolsote-isoduration-ae0bd61.json  caddy-782a3c7.json  cassandra-73cd2c5.json  celery-celery-03e3359.json  danwahlin-angular-jumpstart-12fa4e4.json  dbsetup-mongodb-1.json  (+59 more)
(+9 files in other folders)
